# ak-base-kit-stm32l151

./: .gitignore  README.md
application/: Makefile
application/build_dungeon-game/: Adafruit_GFX.d  Adafruit_GFX.su  Adafruit_ssd1306syp.d  HardwareSerial.d  HardwareSerial2.d  IPAddress.d  Print.d  SPI.d  SPI.su  Stream.d  Stream.su  WMath.d  WString.d  Wire.d  app.d  app.su  app_bsp.d  app_bsp.su  app_data.d  app_non_clear_ram.d  button.d  button.su  buzzer.d  buzzer.su  cmd_line.d  dtostrf.d  dungeon-game.axf  dungeon-game.map  dungeon_action.d  dungeon_action.su  dungeon_control.d  dungeon_control.su  dungeon_effect.d  dungeon_effect.su  dungeon_lane.d  dungeon_lane.su  dungeon_state.d  dungeon_state.su  eeprom.d  fifo.d  (+100 more)
application/docs/: Hướng dẫn Phát triển trên AK Base Kit cho Node-RTS Game.docx
application/sources/app/: app.cpp  app.h  app_bsp.cpp  app_bsp.h  app_data.cpp  app_data.h  app_dbg.h  app_eeprom.h  app_flash.h  app_if.h  app_non_clear_ram.cpp  app_non_clear_ram.h  shell.cpp  task_display.cpp  task_display.h  task_fw.cpp  task_fw.h  task_if.cpp  task_if.h  task_life.cpp  task_life.h  task_list.cpp  task_list.h  task_shell.cpp  task_shell.h  task_uart_if.cpp  task_uart_if.h
application/sources/common/: cmd_line.c  cmd_line.h  screen_manager.cpp  screen_manager.h  utils.c  utils.h
docs/newbie-step-by-step/: 01-environment-setup.md  02-project-map.md  03-first-successful-build.md  04-screen-and-input-flow.md  05-dungeon-core-flow.md  06-test-flash-debug-checklist.md  README.md
pc_simulator/: CMakeCache.txt  CMakeLists.txt  Makefile  ak_mock.h  cmake_install.cmake  compile_commands.json  main.cpp  scr_map_mock.cpp
pc_simulator/screens/: scr_map.h
resources/ROADMAP/: DungeonLoop_Embedded_Runtime_Roadmap.md
(+90 files in other folders)
